--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.5.0",
         "guzzlehttp/guzzle": "6.2.*",
-        "cakephp/collection": "3.0.*"
+        "cartalyst/collections": "1.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
